--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -20,3 +20,21 @@
     margin-bottom: 10px;
   }
 }
+
+// Extra small devices (portrait phones, less than 576px)
+@media (max-width: 575.98px) {
+  .footer {
+    background-color: $PrimaryColor;
+    color: white;
+    height: 600px;
+  }
+}
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .footer {
+    background-color: $PrimaryColor;
+    color: white;
+    height: 600px;
+  }
+}
